--- a/FSEOF/visulazation.ipynb
+++ b/FSEOF/visulazation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,24 +28,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = Builder(\n",
-    "    map_json = \"yl_perox.json\"\n",
-    ")"
+    "b = Builder()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2023-06-03\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cobra.io import read_sbml_model, save_json_model\n",
+    "\n",
+    "PATH = \"c:/Users/eriks/Documents/iGEM/Modeling/Modeling_iGEM/Data/sc_perox_manipulated.xml\"\n",
+    "save_json_model(read_sbml_model(PATH), \"sc_perox.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:/Data/sc_perox_manipulated.xml'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from cobra.io import read_sbml_model, save_json_model\n",
+    "import os\n",
+    "dirname = os.getcwd()\n",
+    "PATH = os.path.join(dirname, \"/Data/sc_perox_manipulated.xml\")\n",
+    "PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\eriks\\\\Documents\\\\iGEM\\\\Modeling\\\\Modeling_iGEM\\\\FSEOF'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dirname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = Builder(model_json=\"sc_perox.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1c513122cbc4337a4103208c8e3f9a7",
+       "model_id": "0a7e1f783c3a45dda8089f42ad4e14b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,12 +138,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b.model = "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -85,12 +159,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "34368ba4908ea1be08ba769dfb7764ab7f8ead2384ebb5604cb86637573696f7"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
